# Framework-ai

./: CMakeLists.txt  LICENSE  README.md
scripts/: prepare_data.py
src/: main.cpp  train.cpp
src/data/: dataset.cpp  dataset.h  tokenizer.cpp  tokenizer.h
src/model/: attention.cpp  attention.h  basis.cpp  basis.h  layer.cpp  layer.h  lm.cpp  lm.h  transformer.cpp  transformer.h
src/training/: adam.cpp  adam.h  trainer.cpp  trainer.h
tests/: test_basis.cpp  test_memory.cpp
